--- a/nodefiles/errors.htm
+++ b/nodefiles/errors.htm
@@ -10,3 +10,110 @@ couldnt write value1.59318,26/07-12:42
 couldnt write value1.80942,26/07-12:44
 couldnt write value1.59318,26/07-12:44
 unable to read, defaulting to last value,28/07-09:00
+unable to read, defaulting to last value,28/07-22:20
+unable to read, defaulting to last value,28/07-22:30
+unable to read, defaulting to last value,28/07-22:50
+unable to read, defaulting to last value,28/07-23:00
+unable to read, defaulting to last value,28/07-23:10
+unable to read, defaulting to last value,28/07-23:20
+unable to read, defaulting to last value,28/07-23:30
+unable to read, defaulting to last value,29/07-08:00
+unable to read, defaulting to last value,31/07-11:40
+unable to read, defaulting to last value,04/08-06:10
+unable to read, defaulting to last value,10/08-19:30
+unable to read, defaulting to last value,10/08-19:50
+unable to read, defaulting to last value,18/08-23:10
+unable to read, defaulting to last value,18/08-23:40
+unable to read, defaulting to last value,19/08-00:00
+unable to read, defaulting to last value,19/08-01:40
+unable to read, defaulting to last value,19/08-01:50
+unable to read, defaulting to last value,20/08-21:10
+unable to read, defaulting to last value,20/08-21:20
+unable to read, defaulting to last value,20/08-21:30
+unable to read, defaulting to last value,20/08-21:40
+unable to read, defaulting to last value,20/08-21:50
+unable to read, defaulting to last value,20/08-22:00
+unable to read, defaulting to last value,20/08-22:10
+unable to read, defaulting to last value,20/08-22:20
+unable to read, defaulting to last value,20/08-22:30
+unable to read, defaulting to last value,20/08-22:50
+unable to read, defaulting to last value,20/08-23:20
+unable to read, defaulting to last value,20/08-23:21
+unable to read, defaulting to last value,20/08-23:30
+unable to read, defaulting to last value,20/08-23:31
+unable to read, defaulting to last value,20/08-23:40
+unable to read, defaulting to last value,20/08-23:50
+unable to read, defaulting to last value,21/08-00:00
+unable to read, defaulting to last value,21/08-00:10
+unable to read, defaulting to last value,21/08-00:20
+unable to read, defaulting to last value,21/08-00:40
+unable to read, defaulting to last value,21/08-01:10
+unable to read, defaulting to last value,21/08-01:40
+unable to read, defaulting to last value,21/08-02:10
+unable to read, defaulting to last value,21/08-03:00
+unable to read, defaulting to last value,21/08-03:20
+unable to read, defaulting to last value,21/08-03:30
+unable to read, defaulting to last value,21/08-03:40
+unable to read, defaulting to last value,21/08-04:00
+unable to read, defaulting to last value,21/08-04:30
+unable to read, defaulting to last value,21/08-06:00
+unable to read, defaulting to last value,21/08-06:20
+unable to read, defaulting to last value,21/08-06:30
+unable to read, defaulting to last value,21/08-06:50
+unable to read, defaulting to last value,21/08-09:10
+unable to read, defaulting to last value,21/08-10:00
+unable to read, defaulting to last value,21/08-23:50
+unable to read, defaulting to last value,22/08-00:00
+unable to read, defaulting to last value,22/08-00:01
+unable to read, defaulting to last value,22/08-00:10
+unable to read, defaulting to last value,22/08-00:11
+unable to read, defaulting to last value,22/08-00:20
+unable to read, defaulting to last value,22/08-00:30
+unable to read, defaulting to last value,22/08-00:40
+unable to read, defaulting to last value,22/08-00:50
+unable to read, defaulting to last value,22/08-01:00
+unable to read, defaulting to last value,22/08-01:10
+unable to read, defaulting to last value,22/08-01:11
+unable to read, defaulting to last value,22/08-01:20
+unable to read, defaulting to last value,22/08-01:30
+unable to read, defaulting to last value,22/08-01:31
+unable to read, defaulting to last value,22/08-01:40
+unable to read, defaulting to last value,22/08-01:50
+unable to read, defaulting to last value,22/08-01:51
+unable to read, defaulting to last value,22/08-02:00
+unable to read, defaulting to last value,22/08-02:01
+unable to read, defaulting to last value,22/08-02:10
+unable to read, defaulting to last value,22/08-02:20
+unable to read, defaulting to last value,22/08-02:30
+unable to read, defaulting to last value,22/08-02:40
+unable to read, defaulting to last value,22/08-02:50
+unable to read, defaulting to last value,22/08-03:00
+unable to read, defaulting to last value,22/08-03:10
+unable to read, defaulting to last value,22/08-03:20
+unable to read, defaulting to last value,22/08-03:30
+unable to read, defaulting to last value,22/08-03:31
+unable to read, defaulting to last value,22/08-03:40
+unable to read, defaulting to last value,22/08-03:41
+unable to read, defaulting to last value,22/08-03:50
+unable to read, defaulting to last value,22/08-03:51
+unable to read, defaulting to last value,22/08-04:00
+unable to read, defaulting to last value,22/08-04:10
+unable to read, defaulting to last value,22/08-04:20
+unable to read, defaulting to last value,22/08-04:30
+unable to read, defaulting to last value,22/08-04:40
+unable to read, defaulting to last value,22/08-04:50
+unable to read, defaulting to last value,22/08-04:51
+unable to read, defaulting to last value,22/08-05:00
+unable to read, defaulting to last value,22/08-05:10
+unable to read, defaulting to last value,22/08-05:11
+unable to read, defaulting to last value,22/08-05:20
+unable to read, defaulting to last value,22/08-05:30
+unable to read, defaulting to last value,22/08-05:40
+unable to read, defaulting to last value,22/08-05:50
+unable to read, defaulting to last value,22/08-06:00
+unable to read, defaulting to last value,22/08-06:10
+unable to read, defaulting to last value,22/08-06:20
+unable to read, defaulting to last value,22/08-06:30
+unable to read, defaulting to last value,22/08-06:40
+unable to read, defaulting to last value,22/08-07:00
+unable to read, defaulting to last value,22/08-07:20
